--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<html>
+<body>
+
 <h2 style="text-align:left">欢迎来到muiclac的个人网站</h2>
 <p style="font-size:24px">    您好，我是muclac。<br />
     我是一个音乐爱好者，音游玩家，半吊子谱师的高中生,爱好是喜欢读书，绘画，打电动。</p>
@@ -9,7 +12,10 @@
 <a href="https://space.bilibili.com/527533872">我的B站空间</a>
 <hr />
 <h2 style="text-aligm:left">联系我</h2>
-<p style="text-size:20px"><br/><br/>
+<p style="text-size:20px"><br/><br/><br/>
 418533564@qq.com<br/>
 four18533564@163.com<br/>
 muiclac@126.com</p>
+
+</body>
+</html>
