--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <hr />
 <h2 style="text-align:left">链接库</h2>
 <a href="">历史博客</a><br/>
-<a href="">网站历史</a><br/>
+<a href="https://muiclac.github.io/history.html">网站历史</a><br/>
 <a href="https://space.bilibili.com/527533872">我的B站空间</a>
 <hr />
 <h2 style="text-aligm:left">联系我</h2>
