--- a/history.html
+++ b/history.html
@@ -11,7 +11,8 @@
 <p style="font-size:12px">0.0.3 添加联系方式</p><br />
 <p style="font-size:6px">2022/12/11/00:06</p>
 <p style="font-size:12px">0.0.4 添加历史版本</p><br />
-
+<p style="font-size:6px">2022/12/11/09：46</p>
+<p style="font-size:12px">0.0.4a 修复无法访问此页面的问题</p><br />
 <hr />
 <a href="https://muiclac.github.io/" style:>返回主页</a>
 </body>
