--- a/history.html
+++ b/history.html
@@ -1,19 +1,21 @@
 <html>
-<body>
+<body style="background:FAEBD7">
 
 <h3 style="text-align=left">历史版本</h3><br />
 <hr / >
-<p style="font-size:6px">2022/12/10/21:00</p>
-<p style="font-size:12px">0.0.1 建立网站</p><br />
-<p style="font-size:6px">2022/12/10/21:30</p>
-<p style="font-size:12px">0.0.2 引用并定义链接库</p><br />
-<p style="font-size:6px">2022/12/10/23:30</p>
-<p style="font-size:12px">0.0.3 添加联系方式</p><br />
-<p style="font-size:6px">2022/12/11/00:06</p>
-<p style="font-size:12px">0.0.4 添加历史版本</p><br />
-<p style="font-size:6px">2022/12/11/09：46</p>
-<p style="font-size:12px">0.0.4a 修复无法访问此页面的问题</p><br />
+<p style="text-size:6px">2022/12/10/21:00</p>
+<p style="text-size:12px">0.0.1 建立网站</p><br />
+<p style="text-size:6px">2022/12/10/21:30</p>
+<p style="text-size:12px">0.0.2 引用并定义链接库</p><br />
+<p style="text-size:6px">2022/12/10/23:30</p>
+<p style="text-size:12px">0.0.3 添加联系方式</p><br />
+<p style="text-size:6px">2022/12/11/00:06</p>
+<p style="text-size:12px">0.0.4 添加历史版本</p><br />
+<p style="text-size:6px">2022/12/11/09：46</p>
+<p style="text-size:12px">0.0.4a 修复无法访问此页面的问题</p><br />
+<p style="text-size:6px">2022/12/11/13:04</p>
+<p style="text-size:12px">0.0.5 添加公告板和优化数项问题和美化页面</p><br />
 <hr />
-<a href="https://muiclac.github.io/" style:>返回主页</a>
+
 </body>
 </html>
