--- a/index.html
+++ b/index.html
@@ -1,18 +1,23 @@
 <html>
-<body>
+<body style="background-color:FAEBD7">
 
 <h2 style="text-align:left">欢迎来到muiclac的个人网站</h2>
 <p style="font-size:24px">    您好，我是muclac。<br />
     我是一个音乐爱好者，音游玩家，半吊子谱师的高中生,爱好是喜欢读书，绘画，打电动。</p>
 <!--  放屁，他爱好这么多，才怪了 -->
 <hr />
+<h3 style="text-align:center">公告板</h3>
+<p><blockquote><br/>现在没有什么特别的消息。</blockquote></p>
+<br/><p dir="rtl">2022/12/11</p>
+<hr/>
+
 <h2 style="text-align:left">链接库</h2>
 <a href="">历史博客</a><br/>
-<a href="https://muiclac.github.io/history.html">网站历史</a><br/>
-<a href="https://space.bilibili.com/527533872">我的B站空间</a>
+<a href="https://muiclac.github.io/history.html" target="_top">网站历史</a><br/>
+<a href="https://space.bilibili.com/527533872" target="_top">我的B站空间</a>
 <hr />
 <h2 style="text-aligm:left">联系我</h2>
-<p style="text-size:20px"><br/><br/><br/>
+<p style="text-size:20px"><br/><br/>
 418533564@qq.com<br/>
 four18533564@163.com<br/>
 muiclac@126.com</p>
