--- a/history.html
+++ b/history.html
@@ -1,5 +1,5 @@
 <html>
-<body style="background:FAEBD7">
+<body style="background-color:FAEBD7">
 
 <h3 style="text-align=left">历史版本</h3><br />
 <hr / >
