--- a/history.html
+++ b/history.html
@@ -11,11 +11,13 @@
 <p style="text-size:12px">0.0.3 添加联系方式</p><br />
 <p style="text-size:6px">2022/12/11/00:06</p>
 <p style="text-size:12px">0.0.4 添加历史版本</p><br />
-<p style="text-size:6px">2022/12/11/09：46</p>
+<p style="text-size:6px">2022/12/11/09:46</p>
 <p style="text-size:12px">0.0.4a 修复无法访问此页面的问题</p><br />
 <p style="text-size:6px">2022/12/11/13:04</p>
 <p style="text-size:12px">0.0.5 添加公告板和优化数项问题和美化页面</p><br />
-<hr />
+<p style="text-size:6px">2022/12/11/23:00</p>
+<p style="text-size:12px">0.0.5a 优化链接跳转和修复数项问题</p><br />
+  <hr />
 
 </body>
 </html>
