--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
 <hr/>
 
 <h2 style="text-align:left">链接库</h2>
-<a href="">历史博客</a><br/>
+<p><a href="">历史博客</a><br/>
 <a href="https://muiclac.github.io/history.html" target="_top">网站历史</a><br/>
-<a href="https://space.bilibili.com/527533872" target="_top">我的B站空间</a>
+<a href="https://space.bilibili.com/527533872" target="_blank">
+<img scr="television.bmp" alt="我的B站空间"/></a></p>
 <hr />
-<h2 style="text-aligm:left">联系我</h2>
+<h2 style="text-aligm:left">联系我<img scr="envelope.bmp"/></h2>
 <p style="text-size:20px"><br/><br/>
 418533564@qq.com<br/>
 four18533564@163.com<br/>
