--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 <p><a href="">历史博客</a><br/>
 <a href="https://muiclac.github.io/history.html" target="_top">网站历史</a><br/>
 <a href="https://space.bilibili.com/527533872" target="_blank">
-<img scr="television.bmp" alt="我的B站空间"/></a></p>
+<img src="television.bmp" alt="我的B站空间"/></a></p>
 <hr />
-<h2 style="text-aligm:left">联系我<img scr="envelope.bmp"/></h2>
+<h2 style="text-aligm:left">联系我<img src="envelope.bmp"/></h2>
 <p style="text-size:20px"><br/><br/>
 418533564@qq.com<br/>
 four18533564@163.com<br/>
