--- a/index.html
+++ b/index.html
@@ -12,12 +12,16 @@
 <hr/>
 
 <h2 style="text-align:left">链接库</h2>
-<p><a href="">历史博客</a><br/>
-<a href="https://muiclac.github.io/history.html" target="_top">网站历史</a><br/>
 <a href="https://space.bilibili.com/527533872" target="_blank">
-<img src="television.bmp" alt="我的B站空间"/></a></p>
+<img src="television.bmp" alt="我的B站空间"  align="right"
+width="50" highth="50"/>
+<p><a href="">历史博客</a><br/>
+
+<a href="https://muiclac.github.io/history.html" target="_top">网站历史</a><br/>
+</a></p>
 <hr />
-<h2 style="text-aligm:left">联系我<img src="envelope.bmp"/></h2>
+<h2 style="text-aligm:left">联系我
+<img src="envelope.bmp" width="40" highth="40"/></h2>
 <p style="text-size:20px"><br/><br/>
 418533564@qq.com<br/>
 four18533564@163.com<br/>
