--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ width="50" highth="50"/>
 </a></p>
 <hr />
 <h2 style="text-aligm:left">联系我
-<img src="envelope.bmp" width="40" highth="40"/></h2>
+<img src="envelope.bmp" width="40" highth="40"align="left"/></h2>
 <p style="text-size:20px"><br/><br/>
 418533564@qq.com<br/>
 four18533564@163.com<br/>
