--- a/index.html
+++ b/index.html
@@ -1,27 +1,69 @@
 <html>
-<body style="background-color:FAEBD7">
-
-<h2 style="text-align:left">欢迎来到muiclac的个人网站</h2>
+<head>
+<style>
+body{
+     background-color:FAEBD7;
+}
+h2{
+    text-align:left;
+}
+h3{
+    text-align:center;
+}
+div{
+    background-color:FFFAFA;
+    background-image:url("ice_crystal.bmp");
+    background-repeat:no-repeat
+    background-place:right bottom
+    border:groove;
+    border-color:000000;
+    border-radius:12px;
+    margin-left:40px;
+    margin-right:40px;
+    margin-top:30px;
+    margin-bottom:50px;
+}
+#board1{
+    text-align:center;
+    font-size:12px;
+}
+#date1{
+    font-size:8px;
+    text-align:right;
+    text-direction:rtl;
+}
+</style>
+</head>
+<body>
+<!--把theme.txt复制到html中-->
+<h2>欢迎来到muiclac的个人网站</h2>
 <p style="font-size:24px">    您好，我是muclac。<br />
     我是一个音乐爱好者，音游玩家，半吊子谱师的高中生,爱好是喜欢读书，绘画，打电动。</p>
 <!--  放屁，他爱好这么多，才怪了 -->
 <hr />
-<h3 style="text-align:center">公告板</h3>
-<p><blockquote><br/>现在没有什么特别的消息。</blockquote></p>
-<br/><p dir="rtl">2022/12/11</p>
+<div>
+  <h3>公告板</h3>
+    <p id="board1"><blockquote>改善和调整网站样貌，现在已支持资源的下载。<br/>现在已支持BMS谱面的下载和资源页面跳转。<br/></blockquote></p>
+    <br/>
+    <p id="date1">2022/12/22</p>
+    </div>
+    <!-- 全新样式的公告板一上线，12月25日换成雪白色和蓝色风格 -->
 <hr/>
 
-<h2 style="text-align:left">链接库</h2>
+<h2>链接库</h2>
 <a href="https://space.bilibili.com/527533872" target="_blank">
 <img src="television.bmp" alt="我的B站空间"  align="right"
+width="50" highth="50"/>
+<a href="https://muiclac.github.io/download.html" target="_top">
+<img src="download.bmp" alt="资源下载"  align="right"
 width="50" highth="50"/>
 <p><a href="">历史博客</a><br/>
 
 <a href="https://muiclac.github.io/history.html" target="_top">网站历史</a><br/>
 </a></p>
 <hr />
-<h2 style="text-aligm:left">联系我
-<img src="envelope.bmp" width="40" highth="40"align="left"/></h2>
+<h2>联系我
+<img src="envelope.bmp" width="40" highth="40"  align="left"/></h2>
 <p style="text-size:20px"><br/><br/>
 418533564@qq.com<br/>
 four18533564@163.com<br/>
