--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@ div.absolute{
   <div>
     <h3>欢迎来到muiclac的主页</h3>
     <a id="link1" href="https://space.bilibili.com/527533872">
-        <img src="bilibili.bmp" alt="B站空间"  align="right" align="top" hight="20px" width="20px">
+        <img src="televsion.bmp" alt="B站空间"  align="right" align="top" hight="20px" width="20px">
     </a>
-    <a id="link1" href="mailto : muiclac@126.com?subject=hello">
-        <img src="envelop,bmp" alt="联系我" align="right" align="top" hight="20px" width="20px">
+    <a id="link1" href="mailto:muiclac@126.com?subject=hello">
+        <img src="envelope.bmp" alt="联系我" align="right" align="top" hight="20px" width="20px">
     </a>
     <p id="contact1" class="absolute">联系我：muiclac@126.com</p>
   </div>
@@ -120,12 +120,12 @@ div.absolute{
 </div>
 <hr/>
   <div class="absolute" id="web1">
-    <a href="/index.html">主页</a><br/><br/>
-    <a href="blog/blog.html">博客空间</a><br/><br/>
-    <a href="download/sourse.html">公开资源</a><br/><br/>
-    <a href="download/chart.html">谱面下载</a><br/><br/>
-    <a href="music/music.html">音乐下载</a><br/><br/>
-    <a href="event/list.html">BMS活动</a><br/>
+    <a href="https://muiclac.github.io/index.html">主页</a><br/><br/>
+    <a href="https://muiclac.github.io/blog/blog.html">博客空间</a><br/><br/>
+    <a href="https://muiclac.github.io/download/sourse.html">公开资源</a><br/><br/>
+    <a href="https://muiclac.github.io/download/chart.html">谱面下载</a><br/><br/>
+    <a href="https://muiclac.github.io/music/music.html">音乐下载</a><br/><br/>
+    <a href="https://muiclac.github.io/event/list.html">BMS活动</a><br/>
   </div>
 </div>
 
