--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@ h2{
 h3{
     text-align:center
 }
+li{
+    display: inline;
+    font-size: 24px;
+    margin:5px 30px 5px 40px
+}
 #contact1{
     font-size:16px;
     color:000000;
@@ -43,11 +48,12 @@ h3{
 #web1{
     color:D0FFFF;
     background-color:E6E6FA;    
-    padding:30px 50px 30px 50px;
-    margin:30px 0px 20px 0px    
+    padding:20px 30px 20px 20px;
+    margin:auto;    
     border:2px soild E0FFFF;
     text-align:left;
-    font-size:20px
+    max-width:9999px;
+
 }
 #context1{
     border-style:soild;
@@ -56,8 +62,7 @@ h3{
     background-color:E0FFFF;
     max-width:1080px;
     width:auto;
-    float:right;
-    margin: 0px 30px 20px 30px
+    margin: 100px 30px 20px 30px
 }
 #board1{
     background-color:FFFAFA;
@@ -96,43 +101,45 @@ div.absolute{
   <div>
     <h3>欢迎来到muiclac的主页</h3>
     <a id="link1" href="https://space.bilibili.com/527533872">
-        <img src="televsion.bmp" alt="B站空间"  align="right" align="top" hight="20px" width="20px">
+        <img src="bilibili.bmp" alt="B站空间"  align="right" align="top" hight="20px" width="20px">
     </a>
-    <a id="link1" href="mailto:muiclac@126.com?subject=hello">
-        <img src="envelope.bmp" alt="联系我" align="right" align="top" hight="20px" width="20px">
+    <a id="link1" href="mailto : muiclac@126.com?subject=hello">
+        <img src="envelop,bmp" alt="联系我" align="right" align="top" hight="20px" width="20px">
     </a>
     <p id="contact1" class="absolute">联系我：muiclac@126.com</p>
   </div>
 <div id="board1">
   <h3>公告板</h3>
     <p id="announcement1">
-        <blockquote>先祝贺您2023年新年快乐
+        <blockquote>先祝贺您2023年春节快乐
         <br/>现在已经支持博客空间，快来看看他写的
                 <a href="blog/blog.html" target="_top">文章
                 </a>吧！
+        <br/>现在已开放音乐界面和活动界面
         <br/>
         今年将会有中国PMS制作大赛1-3月的季赛，可能会在春节时期开始进行。
         </blockquote>
     <!-- 一块公告版 -->
     </p>
     <br/>
-    <p id="date1">2022/01/01</p>
+    <p id="date1">2023/01/18</p>
 </div>
 <hr/>
-  <div class="absolute" id="web1">
-    <a href="https://muiclac.github.io/index.html">主页</a><br/><br/>
-    <a href="https://muiclac.github.io/blog/blog.html">博客空间</a><br/><br/>
-    <a href="https://muiclac.github.io/download/sourse.html">公开资源</a><br/><br/>
-    <a href="https://muiclac.github.io/download/chart.html">谱面下载</a><br/><br/>
-    <a href="https://muiclac.github.io/music/music.html">音乐下载</a><br/><br/>
-    <a href="https://muiclac.github.io/event/list.html">BMS活动</a><br/>
-  </div>
 </div>
-
+  <div id="web1">
+      <ul>
+        <li><a href=https://muiclac.github.io/index.html">  主页  </a></li>
+        <li><a href="https://muiclac.github.io/blog/blog.html">  博客空间  </a></li>
+        <li><a href="https://muiclac.github.io/download/sourse.html">  公开资源  </a></li>
+        <li><a href="https://muiclac.github.io/download/chart.html">  谱面下载  </a></li>
+        <li><a href="https://muiclac.github.io/music/music.html">  音乐下载  </a></li>
+        <li><a href="https://muiclac.github.io/event/list.html">  BMS活动  </a></li>
+      <ul/>
+  </div>
 <div id="context1">
   
   <h2>我是谁？</h2>
-  <p>大家好，我是muiclac，一个主要以techno和synth为风格创作音乐的高中生曲师</p>
+  <p>大家好，我是muiclac，一个主要以techno和DnB风格创作音乐的高中生曲师</p>
     <br/><h3>我的爱好</h3>
     <br/><p>我喜欢读书，绘画和音乐等爱好。</p>
     <!--  放屁，他爱好这么多，才怪了 -->
