--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@ li{
 }
 
 #link1{
-    align:right；
-    hight:20px；
-    width:20px；
+    align:right;
+    hight:20px;
+    width:20px;
 }
 #menu1{
     max-width:9999px;
@@ -117,7 +117,7 @@ div.absolute{
                 </a>吧！
         <br/>现在已开放音乐界面和活动界面
         <br/>
-        今年将会有中国PMS制作大赛1-3月的季赛，可能会在春节时期开始进行。
+        今年将会有中国BMS制作大赛1-5月的季赛，可能会在春节时期开始进行。
         </blockquote>
     <!-- 一块公告版 -->
     </p>
@@ -126,34 +126,36 @@ div.absolute{
 </div>
 <hr/>
 </div>
-  <div id="web1">
-      <ul>
-        <li><a href=https://muiclac.github.io/index.html">  主页  </a></li>
-        <li><a href="https://muiclac.github.io/blog/blog.html">  博客空间  </a></li>
-        <li><a href="https://muiclac.github.io/download/sourse.html">  公开资源  </a></li>
-        <li><a href="https://muiclac.github.io/download/chart.html">  谱面下载  </a></li>
-        <li><a href="https://muiclac.github.io/music/music.html">  音乐下载  </a></li>
-        <li><a href="https://muiclac.github.io/event/list.html">  BMS活动  </a></li>
-      <ul/>
-  </div>
-<div id="context1">
-  
-  <h2>我是谁？</h2>
-  <p>大家好，我是muiclac，一个主要以techno和DnB风格创作音乐的高中生曲师</p>
-    <br/><h3>我的爱好</h3>
-    <br/><p>我喜欢读书，绘画和音乐等爱好。</p>
-    <!--  放屁，他爱好这么多，才怪了 -->
-    <br/><p>在读书和写作方面，我会时不时读一读小说，构筑起幻想出来的精彩绝伦的故事史诗和宏伟的世界。通过不断的阅读一本本书，我也能够独自刻画出属于自己的世界和故事，我会在自己的博客空间上发表自己的文章，发表出我自己的个人观点。
-    <br/>在绘画和模型方面，我也会陆续地绘画出自己的角色，他们有着自己的故事，可以使用这些角色的模型来进行二次创作和进行直播和视频制作。绘画的图片和人物模型可以在资源下载中进行下载。</p>
-    <br/><p>在音乐方面，我比较喜欢听东方的曲目以及GroundBreaking活动中的曲目，他们也有着各自的故事，我也会用自己的设备上面的软件来进行谱写歌曲，并在网站上面进行公开。也会时不时举办各类活动。</p>
-    <br/>
-    <p>在游戏方面，我也是有着极大的兴趣，我游玩的范围也很广泛。我目前比较喜欢游玩音乐游戏和沙盒类游戏。</p>
-    <br/><p>在音乐游戏上，我主要游玩4K和7K及其7+1K和9K的音乐游戏。4K音游大概在5dan左右，7和7+1K音游在发狂六段水平，osu！ mania的
-        <a href="https://osu.ppy.sh/users/24950026" target="_blank">pp</a>
-        <!--游戏水平真的很差，和tyrcs比较来说很差-->
-    表现分约1600左右。9K方面，我作为一个完全的新人，继承在我游玩7K音游的基础上，现在正在熟悉键位配置，并进行寻找PMS段位认定的曲目资源和家用机的资源。
-    <!--七段when?  发狂when?-->
-    在谱面制作方面，我主要制作7+1K谱面和9K谱面，我也会在自己的网站上面进行公开。在谱面的另一个方面，在质量方面，我作为一个新人谱面编辑者，我的技术和制作水平不算优秀，在谱面制作上，我存在着严重的不足。在谱面里，会有大量的奇怪的配置，让人感觉到打击感差的现象。我也会多加练习，提高自己的水平。在曲目编写方面，我也是感兴趣的。幸运的是，我在我的设备里面有能够独立进行制作BMS的乐曲，谱面，影像的所有软件，我也会自己制作乐曲进行公开。<p/>
-    <br/><p>我作为一个高中生，也是很忙碌的，每天学习知识，虽然每天都是很劳累的，但是每天也过得很充实，我也会为了实现自己的梦想而努力和奋斗，我在爱好方面的梦想也仅仅是我的梦想的一部分。我也会在着高中和大学的几年时间里学习到自己作为一个人的意义，我自己学习是为了什么，我对于我学习到的知识的运用。我也会把我学习到的知识运用到自己的生活和爱好中。</p>
 </div>
+<div id="web1">
+    <ul>
+      <li><a href=“https://muiclac.github.io/index.html">  主页  </a></li>
+      <li><a href="https://muiclac.github.io/blog/blog.html">  博客空间  </a></li>
+      <li><a href="https://muiclac.github.io/download/sourse.html">  公开资源  </a></li>
+      <li><a href="https://muiclac.github.io/download/chart.html">  谱面下载  </a></li>
+      <li><a href="https://muiclac.github.io/music/music.html">  音乐下载  </a></li>
+      <li><a href="https://muiclac.github.io/event/list.html">  BMS活动  </a></li>
+    </ul>
+</div>
+  <div id="context1">
+  
+    <h2>我是谁？</h2>
+    <p>大家好，我是muiclac，一个主要以techno和DnB风格创作音乐的高中生曲师</p>
+      <br/><h3>我的爱好</h3>
+      <br/><p>我喜欢读书，绘画和音乐等爱好。</p>
+      <!--  放屁，他爱好这么多，才怪了 -->
+      <br/><p>在读书和写作方面，我会时不时读一读小说，构筑起幻想出来的精彩绝伦的故事史诗和宏伟的世界。通过不断的阅读一本本书，我也能够独自刻画出属于自己的世界和故事，我会在自己的博客空间上发表自己的文章，发表出我自己的个人观点。
+      <br/>在绘画和模型方面，我也会陆续地绘画出自己的角色，他们有着自己的故事，可以使用这些角色的模型来进行二次创作和进行直播和视频制作。绘画的图片和人物模型可以在资源下载中进行下载。</p>
+      <br/><p>在音乐方面，我比较喜欢听东方的曲目以及GroundBreaking活动中的曲目，他们也有着各自的故事，我也会用自己的设备上面的软件来进行谱写歌曲，并在网站上面进行公开。也会时不时举办各类活动。</p>
+      <br/>
+      <p>在游戏方面，我也是有着极大的兴趣，我游玩的范围也很广泛。我目前比较喜欢游玩音乐游戏和沙盒类游戏。</p>
+      <br/><p>在音乐游戏上，我主要游玩4K和7K及其7+1K和9K的音乐游戏。4K音游大概在5dan左右，7和7+1K音游在发狂六段水平，osu！ mania的
+          <a href="https://osu.ppy.sh/users/24950026" target="_blank">pp</a>
+          <!--游戏水平真的很差，和tyrcs比较来说很差-->
+      表现分约2400左右。9K方面，我作为一个完全的新人，继承在我游玩7K音游的基础上，现在是发狂初段，并进行寻找PMS段位认定的曲目资源。
+      <!--七段when?  发狂when?-->
+      在谱面制作方面，我主要制作7+1K谱面和9K谱面，我也会在自己的网站上面进行公开。在谱面的另一个方面，在质量方面，我作为一个新人谱面编辑者，我的技术和制作水平不算优秀，在谱面制作上，我存在着严重的不足。在谱面里，会有大量的奇怪的配置，让人感觉到打击感差的现象。我也会多加练习，提高自己的水平。在曲目编写方面，我也是感兴趣的。幸运的是，我在我的设备里面有能够独立进行制作BMS的乐曲，谱面，影像的所有软件，我也会自己制作乐曲进行公开。<p/>
+      <br/><p>我作为一个高中生，也是很忙碌的，每天学习知识，虽然每天都是很劳累的，但是每天也过得很充实，我也会为了实现自己的梦想而努力和奋斗，我在爱好方面的梦想也仅仅是我的梦想的一部分。我也会在着高中和大学的几年时间里学习到自己作为一个人的意义，我自己学习是为了什么，我对于我学习到的知识的运用。我也会把我学习到的知识运用到自己的生活和爱好中。</p>
+  </div>
 </body>
+</html>
