--- a/index.html
+++ b/index.html
@@ -129,12 +129,12 @@ div.absolute{
 </div>
 <div id="web1">
     <ul>
-      <li><a href=“https://muiclac.github.io/index.html">  主页  </a></li>
-      <li><a href="https://muiclac.github.io/blog/blog.html">  博客空间  </a></li>
+      <li><a href=“https://muiclac.github.io/index.html" target="_top">  主页  </a></li>
+      <li><a href="https://muiclac.github.io/blog/blog.html" target="_top">  博客空间  </a></li>
       <li><a href="https://muiclac.github.io/download/sourse.html">  公开资源  </a></li>
       <li><a href="https://muiclac.github.io/download/chart.html">  谱面下载  </a></li>
       <li><a href="https://muiclac.github.io/music/music.html">  音乐下载  </a></li>
-      <li><a href="https://muiclac.github.io/event/list.html">  BMS活动  </a></li>
+      <li><a href="https://muiclac.github.io/event/list.html" target="_top">  BMS活动  </a></li>
     </ul>
 </div>
   <div id="context1">
