--- a/download/chart.html
+++ b/download/chart.html
@@ -35,8 +35,8 @@ div{
     background-color:EEEEEE;
 
 }
-</head>
 </style>
+</head>
 <body>
 <h3>Guideline</h3>
 <p id="guide1"><a href="#bms">
@@ -120,9 +120,17 @@ div{
         <a href="For_No_Reason [Decision].zip"  download="For_No_Reason [Decision].zip">DL</a></td>
     <td>皿複合,乱打,ソフラン</td>
   </tr>
+  <td>Only 1 Minute [destory]</td>
+    <td>816ThreeNumbers</td>
+    <td>★9/sl6</td>
+    <td>2023/01/10</td>
+    <td>
+        <a href="For_No_Reason [Decision].zip"  download="For_No_Reason [Decision].zip">DL</a></td>
+    <td>低Total</td>
+  </tr>
   <!--空的(empty)-->
   <!--下载内容-->
   <!--每次更新新的差分，ctrl+c,ctrl+v-->
   </table>
-<body>
+</body>
 </html>
