--- a/download/chart.html
+++ b/download/chart.html
@@ -125,9 +125,17 @@ div{
     <td>★9/sl6</td>
     <td>2023/01/10</td>
     <td>
-        <a href="For_No_Reason [Decision].zip"  download="For_No_Reason [Decision].zip">DL</a></td>
+        <a href="only_one_minute[destory].zip"  download="only_one_minute[destory].zip">DL</a></td>
     <td>低Total</td>
   </tr>
+  <td>情熱大連[destory]</td>
+  <td>Zris</td>
+  <td>★21/st0</td>
+  <td>2023/02/12</td>
+  <td>
+      <a href="qingre_dalian[Enthusiastic].zip"  download="qingre_dalian[Enthusiastic].zip">DL</a></td>
+  <td>皿複合,乱打,縦</td>
+</tr>
   <!--空的(empty)-->
   <!--下载内容-->
   <!--每次更新新的差分，ctrl+c,ctrl+v-->
