--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@ li{
 #board1{
     background-color:FFFAFA;
     background-image:url("ice_crystal.bmp");
-    background-repeat:no-repeat
-    background-place:right bottom
+    background-repeat:no-repeat;
+    background-place:right bottom;
     border:groove;
     border-color:000000;
     border-radius:12px;
-    margin:30px 100px 20px 100px
+    margin:30px 100px 20px 100px;
     hight:300px;
     max-width:1500px;
     width:auto;
@@ -106,6 +106,14 @@ div.absolute{
     <a id="link1" href="mailto : muiclac@126.com?subject=hello">
         <img src="envelop,bmp" alt="联系我" align="right" align="top" hight="20px" width="20px">
     </a>
+    <a id="link1" href="https://discord.com/channels/@me" onclick="say()" target="_blank">
+        <img src="discord.bmp" alt="discord空间" align="right" align="top" hight="20px" width="20px">
+        <script>
+        function say(){
+            alert('contect me muiclac#2677');
+        }
+        </script>
+    </a>
     <p id="contact1" class="absolute">联系我：muiclac@126.com</p>
   </div>
 <div id="board1">
@@ -117,7 +125,7 @@ div.absolute{
                 </a>吧！
         <br/>现在已开放音乐界面和活动界面
         <br/>
-        今年将会有中国BMS制作大赛1-5月的季赛，可能会在春节时期开始进行。
+        高考加油，目标985院校!!
         </blockquote>
     <!-- 一块公告版 -->
     </p>
@@ -129,7 +137,7 @@ div.absolute{
 </div>
 <div id="web1">
     <ul>
-      <li><a href=“https://muiclac.github.io/index.html" target="_top">  主页  </a></li>
+      <li><a href=“https://muiclac.github.io/index.html” target="_top">  主页  </a></li>
       <li><a href="https://muiclac.github.io/blog/blog.html" target="_top">  博客空间  </a></li>
       <li><a href="https://muiclac.github.io/download/sourse.html">  公开资源  </a></li>
       <li><a href="https://muiclac.github.io/download/chart.html">  谱面下载  </a></li>
@@ -158,4 +166,3 @@ div.absolute{
       <br/><p>我作为一个高中生，也是很忙碌的，每天学习知识，虽然每天都是很劳累的，但是每天也过得很充实，我也会为了实现自己的梦想而努力和奋斗，我在爱好方面的梦想也仅仅是我的梦想的一部分。我也会在着高中和大学的几年时间里学习到自己作为一个人的意义，我自己学习是为了什么，我对于我学习到的知识的运用。我也会把我学习到的知识运用到自己的生活和爱好中。</p>
   </div>
 </body>
-</html>
