--- a/download/chart.html
+++ b/download/chart.html
@@ -2,7 +2,7 @@
 <head>
 <style>
 body{
-    background-color:A0A0A0;
+    background-color:#A0A0A0;
 }
 h3{
     background-color:808080;
@@ -11,28 +11,28 @@ h3{
 }
 #guide1{
    text-align:left;
-   background-color:FFFAFA;
+   background-color:#FFFAFA;
 }
 table{
     width:95%;
     border-style:soild;
     border-width:3px;
-    border-color:000000;
+    border-color:#000000;
     margin:40 30 40 30;
 }
 th{
-    bacoground-color:808080;
-    text-color:FFFFFF;
+    background-color:#808080;
+    font:#FFFFFF;
     font-size:20px;
 }
 td{
     font-size:12px;
     text-align:center;
-    background-colour:eaffe9;
+    background-color:#eaffe9;
     text-align:center;
 }
 div{
-    background-color:EEEEEE;
+    background-color:#EEEEEE;
 
 }
 </style>
@@ -41,6 +41,8 @@ div{
 <h3>Guideline</h3>
 <p id="guide1"><a href="#bms">
 <abbr title="Be Music-Sourse">BMS</abbr></a></p>
+<p id="guide1"><a href="https://muiclac.github.io/download/17.html">
+  Secret Zone</a></p>
 
 <!--点击链接可以跳转-->
 <hr/>
