--- a/download/17.html
+++ b/download/17.html
@@ -171,7 +171,7 @@ td{
 <!--模板生的-->
 <body>
     <div id="templatemo_menu_panel">
-<h3><a href="https://muiclac.github.io/"  class="current">返回</a> <h3>               
+<h3><a href="##"  class="current">返回</a> <h3>               
     </div>
 	<div id="templatemo_header_panel">
     	<div id="templatemo_title_section">
@@ -206,6 +206,27 @@ td{
 	</div>
     <hr/>    <hr/>
     <h3>曲变更差分</h3>
+	<table id="tb1" border="1">
+		<tr>
+		  <th>歌</th>
+		  <th id="hyper">Hyper</th>
+		  <th id="another">Another</th>
+		  <th id="insane">Insane</th>
+		  <th>评价</th>
+		  <!--表头-->
+		</tr>
+		<th>NS31</th>
+		<th id="hyper"><a href="[17]NS31.zip" download="[17]NS31.zip">8</a></th>
+		<th id="another"><a href="[17]NS31.zip" download="[17]NS31.zip">12</a></th>
+		<th id="insane"><a href="[17]NS31.zip" download="[17]NS31.zip">14</a></th>
+		<th id="comment">曲变更差分<br>结尾有着中间相同的变速<br>乱打,连皿和纵连频发的谱面<br>insane难度的谱面血量更少,判定更严</th>
+	  </tr>
+	  <th>TECHNO-ROUGE</th>
+	  <th id="hyper"></th>
+	  <th id="another"><a href="[17]TECHNO-LOGUE_song_changed.zip" download="[17]TECHNO-LOGUE_song_changed.zip">11</a></th>
+	  <th id="insane"></th>
+	  <th id="comment">B.J.Cup#3rd最新最热曲目<br>曲变更差分<br>在原本的曲子上添加了重复的一些音和延迟以及一些变速<br>物量虽然很少,但是变速和延迟把难度提高到新的层次</th>
+	  </table>
     <hr/>    <hr/>
     <h3>原创歌曲</h3>
     <hr/>    <hr/>
@@ -220,3 +241,4 @@ td{
     </div>
 </body>
 </html>
+
