--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ div.absolute{
     left:0;
 }
 body{
-    background-image: url("/source/back1.jpg") ;
+    background-image: url("/back1.jpg") ;
     background-attachment: fixed;
 }
 li{
