--- a/index.html
+++ b/index.html
@@ -104,12 +104,12 @@ h2{
 <body>
     <div id="category1">
 <ul>
-    <li id="direction1"> <a href="index.html">主页</a></li>
-    <li id="direction1"> <a href="music/music.html">音乐</a></li>
-    <li id="direction1"> <a href="download/chart.html">谱面</a></li>
-    <li id="direction1"> <a href="blog/blog.html">博客</a></li>
-    <li id="direction1"> <a href="link/link.html">链接库</a></li>
-    <li id="direction1"> <a href="event/event.html">活动</a></li>
+    <li id="direction1"> <a href="https://muiclac.github.io/index.html">主页</a></li>
+    <li id="direction1"> <a href="https://muiclac.github.io/music/music.html">音乐</a></li>
+    <li id="direction1"> <a href="https://muiclac.github.io/download/chart.html">谱面</a></li>
+    <li id="direction1"> <a href="https://muiclac.github.io/blog/blog.html">博客</a></li>
+    <li id="direction1"> <a href="https://muiclac.github.io/link/link.html">链接库</a></li>
+    <li id="direction1"> <a href="https://muiclac.github.io/event/event.html">活动</a></li>
     </ul>
     </div>
 </br>
