--- a/music/music.html
+++ b/music/music.html
@@ -110,7 +110,9 @@ h4{
     border-radius: 25px;
 }
 #music1{
-    float: right;
+    width: 128px;
+    height: 128px;
+    padding: 20px 20px 20px 20px ;
     align-items: center;
 }
 #genre1{
