--- a/music/music.html
+++ b/music/music.html
@@ -110,6 +110,8 @@ h4{
     border-radius: 25px;
 }
 #music1{
+    float: right;
+    overflow: hidden;
     width: 128px;
     height: 128px;
     padding: 20px 20px 20px 20px ;
@@ -212,7 +214,7 @@ h4{
    </p>
    </div>
 <div id="introduce1">
-    <img id="music1" src="/music/destructiveRebirth.jpg">
+    <img id="music1" src="/music/dr.jpg">
     <h4>Destructive Rebirth</h4>
     <p >
        <a id="download" href="https://manbow.nothing.sh/event/event.cgi?action=More_def&num=24&event=144">会场</a> 
@@ -227,7 +229,7 @@ h4{
 <hr>
 <h4>2023</h4>
 <div id="introduce1">
-    <img id="music1" src="/music/alternativeSteel.jpg">
+    <img id="music1" src="/music/steel.jpg">
     <h4>Alternative Steel</h4>
     <p >
       <del id="download">会场</del> 
@@ -239,7 +241,7 @@ h4{
    </p>
    </div>
 <div id="introduce1">
- <img id="music1" src="/music/terminalConnection.jpg">
+ <img id="music1" src="/music/terminal.jpg">
  <h4>Terminal Connection</h4>
  <p >
     <a id="download" href="https://starkey.ivory.ne.jp/bjcup/anotherbjc3/detail/view/4/">会场</a> 
