--- a/music/music.html
+++ b/music/music.html
@@ -166,8 +166,9 @@ h4{
    </p>
     <p id="genre1"> 风格: Ambient House</p>
     <p id="content1">BMSをたくさん作るぜ'25 参加作品</br>
-   个人的第一个BMS作品，运用鼓点和旋律来构建了一个数字生命的描述
-   </p>
+   运用采样和氛围构建一个在太空中的一个生态圈，曲子在去年十月份写完的<br>
+个人感觉写的不太好，尽管混音出了一些问题，曲子的氛围是到位的<br>
+在这次的谱面中，我邀请了LED来写insane谱面</p>
    </div>
    <div id="introduce1">
     <img id="music1" src="/music/btgof.jpg">
